[gd_scene load_steps=4 format=3 uid="uid://c1ucrx1kmmodl"]

[ext_resource type="Script" path="res://scene/user_interface/entity/window/popup_window/popup_window.gd" id="1_05qa6"]
[ext_resource type="Theme" uid="uid://dbpcf5s8c2231" path="res://assets/resources/theme/main_theme.tres" id="2_yqdxk"]
[ext_resource type="Texture2D" uid="uid://t2wkxweapib0" path="res://assets/sprites/ui/back.png" id="3_hu6rc"]

[node name="PopupPanel" type="CanvasLayer"]
process_mode = 2
layer = 10
visible = false
script = ExtResource("1_05qa6")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yqdxk")

[node name="Margin1" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ColorRect" type="ColorRect" parent="Panel/Margin1"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Panel/Margin1"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Panel" type="VBoxContainer" parent="Panel/Margin1/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/Margin1/MarginContainer/Panel"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/Margin1/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_hu6rc")

[node name="TitleLabel" type="Label" parent="Panel/Margin1/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Test"

[node name="ContentLabel" type="RichTextLabel" parent="Panel/Margin1/MarginContainer/Panel"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Test"
fit_content = true

[connection signal="pressed" from="Panel/Margin1/MarginContainer/Panel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
